SERVER-98817 Make QueryAnalysisWriter correctly discard duplicate samples (#30684)

GitOrigin-RevId: 67db7020fad93cfa6276e815ac9a0611bd47d00f